# rustdoc-mcp

./: .mcp.json  .mise.toml  Cargo.toml  Justfile  PLAN.md  README.md  deny.toml  opencode.jsonc  tempo.config.ts
.github/: renovate.json
.github/workflows/: ci.yml
src/: cache.rs  cargo.rs  cli.rs  commands.rs  context.rs  doc.rs  error.rs  fingerprint.rs  format.rs  lib.rs  lockfile.rs  main.rs  path.rs  schema.rs  server.rs  stdlib.rs  tracing.rs  types.rs  worker.rs
src/format/: builders.rs  extraction.rs  mod.rs  renderers.rs
src/handlers/: get_function_signature.rs  get_generic_bounds.rs  get_type_definition.rs  inspect_item.rs  legacy.rs  list_methods.rs  list_module_contents.rs  list_trait_impls.rs  mod.rs
src/item/: item_ref.rs  iterator.rs  mod.rs  traits.rs
src/search/: index.rs  mod.rs  query.rs  rustdoc.rs  scoring.rs  tokenize.rs
src/tools/: inspect_crate.rs  inspect_item.rs  list_crates.rs  mod.rs  search.rs  set_workspace.rs
src/workspace/: context.rs  detection.rs  lockfile.rs  metadata.rs  mod.rs  rustdoc.rs
tests/: detection_test.rs  generation_test.rs  inspect_crate_test.rs  inspect_item_test.rs  search_test.rs  stdlib_search_test.rs
tests/common/: mod.rs
