[package]
name = "rustdoc-mcp"
version = "0.2.0"
edition = "2024"

[dependencies]
# Core
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
rmcp = { version = "0.8", features = ["transport-io"] }

# Rustdoc types and metadata
rustdoc-types = "0.56"
cargo_metadata = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["use-std"] }

# Caching and performance
bumpalo = "3.19"

# Search functionality
rust-stemmers = "1.2"
ahash = "0.8"
rapidfuzz = "0.5"
toml = { version = "0.9", features = ["parse"] }

# File system operations
ignore = "0.4"

# Tracing and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Text processing
regex = "1.0"
rstest = "0.26.1"
dirs = "6.0.0"
lru = "0.16.3"
futures = "0.3.31"
thiserror = "2.0.17"

[dev-dependencies]
assert2 = "0.3.16"
rstest = "0.26.1"
tempfile = "3.23.0"
