[package]
name = "rustdoc-mcp"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Core
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }

# Rustdoc types and metadata
rustdoc-types = "0.56"
cargo_metadata = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["use-std"] }

# Caching and performance
bumpalo = "3.19"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Search functionality
rust-stemmers = "1.2"
ahash = "0.8"
rapidfuzz = "0.5"
toml = { version = "0.9", features = ["parse"] }

# File system operations
ignore = "0.4"

# Tracing and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0.17"

# Utilities
regex = "1.0"
dirs = "6.0.0"
lru = "0.16.3"
futures = "0.3.31"
tokio-util = { version = "0.7.18", features = ["rt"] }

[dev-dependencies]
assert2 = "0.3.16"
rstest = "0.26.1"
tempfile = "3.23.0"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Too noisy for a documentation-heavy crate
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Format string style preference
uninlined_format_args = "allow"
# Module naming
module_name_repetitions = "allow"
# Not useful for this crate
must_use_candidate = "allow"
